<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >
    
	<ScrollView 
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:fillViewport="true"
	    >
	    
	    <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:orientation="vertical"
	        android:layout_margin="5dp"
	        >
	        <TextView 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold"
				android:text="Plot"
				android:textColor="#565656"
				android:background="@drawable/heading_bg"
				android:layout_marginTop="10dp"
				android:paddingLeft="5dp"
		        />
	         <CheckBox 
	             android:id="@+id/ch_bx_natural_plot"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Natural Plot"
	             />
	         <CheckBox 
	             android:id="@+id/ch_bx_common_plot"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Common Plot"
	             />
	         <CheckBox 
	             android:id="@+id/ch_bx_garden"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Garden"
	             />
	         <CheckBox 
	             android:id="@+id/ch_bx_fenced"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Fenced"
	             />
	         <TextView 
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:background="@drawable/heading_bg"
	             android:text="View"
	             android:textAppearance="?android:attr/textAppearanceLarge"
	             android:paddingLeft="5dp"
	             android:textStyle="bold"
	             android:textColor="#565656"
	             />
	         <LinearLayout 
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:orientation="horizontal"
	             android:weightSum="10"
	             >
	              <CheckBox 
		             android:id="@+id/ch_bx_sea"
		             android:layout_height="wrap_content"
		             android:layout_width="0dp"
		             android:text="See"
		             android:layout_weight="4"
		             />
	               <CheckBox 
		             android:id="@+id/ch_bx_lake"
		             android:layout_height="wrap_content"
		             android:layout_width="0dp"
		             android:text="Lake"
		             android:layout_weight="4"
		             />	             
	         </LinearLayout>
	          <CheckBox 
	             android:id="@+id/ch_bx_Mountain"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Mountain"
	             />
	           <CheckBox 
	             android:id="@+id/ch_bx_panaroma"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="PANORAMA"
	             />
	           <TextView 
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:background="@drawable/heading_bg"
	             android:text="Comforts"
	             android:textAppearance="?android:attr/textAppearanceLarge"
	             android:paddingLeft="5dp"
	             android:textStyle="bold"
	             android:textColor="#565656"
	             />
	           
	            <CheckBox 
	             android:id="@+id/ch_bx_washing_machine"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Washing Machine"
	             />
	            <CheckBox 
	             android:id="@+id/ch_bx_tumble"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Tumble drier"
	             />
	           
	            <CheckBox 
	             android:id="@+id/ch_bx_air_condition"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Aircondition warm/cold"
	             />
	           <CheckBox 
	             android:id="@+id/ch_bx_ventilator"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"
	             android:text="Ventilator"
	             />
	           
	           <LinearLayout 
	               android:layout_height="wrap_content"
	               android:layout_width="fill_parent"
	               android:orientation="horizontal"
	               android:weightSum="12"
	               android:gravity="center"
	               android:layout_marginTop="10dp"
	               >
	               <Button 
	                   android:id="@+id/btn_next_to_parking"
	                   android:layout_width="0dp"
	                   android:layout_weight="4"
	                   android:layout_height="wrap_content"
	                   android:text="@string/str_next"
	                   style="?android:attr/buttonBarButtonStyle"
	                   android:background="@drawable/btn_red_bg"
	                   />
	               <Button 
	                   android:id="@+id/btn_save_view"
	                   android:layout_width="0dp"	                   
	                   android:layout_weight="4"
	                   android:layout_height="wrap_content"
	                   android:text="@string/str_save"
	                   android:layout_marginLeft="7dp"
	                   android:layout_marginRight="7dp"
	                   style="?android:attr/buttonBarButtonStyle"
	                   android:background="@drawable/btn_gray_bg"
	                   />
	               <Button 
	                   android:layout_height="wrap_content"
	                   android:layout_width="0dp"
	                   android:layout_weight="4"
	                    android:text="@string/str_clear"
	                    android:textColor="#FFFFFF"
	                   style="?android:attr/buttonBarButtonStyle"
	                   android:background="@drawable/btn_red_bg"
	                   />
	           </LinearLayout>
	           
	    </LinearLayout>
	    
	</ScrollView>
    
    
</LinearLayout>
